--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: "/uploads"
 
 collections:
   - name: "posts"
-    label: "Posts"
+    label: "Post"
     folder: "posts"
     create: true
     slug: "{{slug}}"
@@ -16,3 +16,23 @@ collections:
       - {label: "Excerpt", name: "excerpt", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "products"
+    label: "Product"
+    folder: "products"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Price", name: "price", widget: "number"}
+      - {label: "Description",  name: "description", widget: "text"}
+      - {label: "Options", name: "options", widget: "list", field: {label: Option, name: option, widget: text}}
+      - {label: "Images", name: "images", widget: "list", field: {label: Image, name: image, widget: image}}
+  - name: "featured"
+    label: "Featured"
+    folder: "featured"
+    create: true
+    slug: ""
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description",  name: "description", widget: "text"}
+      - {label: "Image", name: "image", widget: "image"}
